--- a/packages/adminrouter/extra/src/common/server.conf
+++ b/packages/adminrouter/extra/src/common/server.conf
@@ -1,7 +1,8 @@
-ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-# Ref: https://github.com/cloudflare/sslconfig/blob/master/conf
-# Modulo ChaCha20 cipher.
-ssl_ciphers EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-ssl_prefer_server_ciphers on;
+# https://ssl-config.mozilla.org/#server=nginx&version=1.9.15&config=intermediate&openssl=1.0.2k&hsts=false&ocsp=false&guideline=5.4
+
+ssl_protocols TLSv1.2;
+ssl_dhparam common/dhparam;
+ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+ssl_prefer_server_ciphers off;
 
 server_name dcos.*;
