fix: adminrouter Dockerfile builds w/ modern venv

--- a/packages/adminrouter/docker/Dockerfile
+++ b/packages/adminrouter/docker/Dockerfile
@@ -68,9 +68,9 @@ RUN set -ex \
 # Refs:
 #   https://github.com/docker/docker/issues/12327#issuecomment-188921470
 #   https://github.com/docker/docker/issues/12327#issuecomment-187158265
-RUN python3 -m pip install --upgrade virtualenv
+RUN python3 -m pip install --ignore-installed setuptools && python3 -m pip install --upgrade virtualenv
 RUN set -ex \
-    && virtualenv --no-site-packages $VENV_DIR \
+    && virtualenv $VENV_DIR \
     && ${VENV_DIR}/bin/pip install --upgrade setuptools pip
 
 ENV PATH ${VENV_DIR}/bin:$PATH
